# Plotypus_4

./: .gitignore  CMakeLists.txt  codestyle.astylerc
aux/: getPalettes.py
diagrams/: 00-classes.puml  00-interfaces-with-far.puml  00-interfaces.puml  01-collection.puml  01-persistable.puml  01-scriptable.puml  99-Report.puml
src/: main.cpp  plotypus.cpp  plotypus.h
src/base/: _collection.h  _collection.txx  customizableFragment.cpp  customizableFragment.h  customizableImpl.cpp  customizableImpl.h  mutable.h  namedtype.h  persistableimpl.cpp  persistableimpl.h  polymorphiclist.h  polymorphiclist.txx  scriptable.h  scriptfragment.h  serializable.h  userCodeFragment.h  util.cpp  validatable.h  validationresult.cpp  validationresult.h  validationresult.txx
src/base/baseproperties/: collection.h  propagatingpersistable.h
src/base/baseproperties/collection/: array.h  array.txx  arrayconstiterable.h  arrayconstiterable.txx  arrayiterable.h  arrayiterable.txx  defaultcollection.h  fifo.h  fifo.txx  fifoconstiterable.h  fifoiterable.h  fifoiterable.txx
src/base/baseproperties/persistable/: defaultpersistable.cpp  defaultpersistable.h  defaultpropagatingpersistable.cpp  defaultpropagatingpersistable.h  persistable.h
src/base/collection/: array.h  array.txx  arrayconstiterable.txx  arrayiterable.h  arrayiterable.txx  collection.cpp  collection.h  collection.txx  fifo.h  fifo.txx  fifoconstiterable.h  fifoconstiterable.txx  fifoiterable.h  stdrangeutils.cpp  stdrangeutils.h
src/base/fragments/: genericfontfragment.cpp  genericfontfragment.h  usercodefragment.cpp  usercodefragment.h
src/base/generic/: genericfontfragment.cpp  genericfontfragment.h  persistableimpl.cpp  persistableimpl.h  polymorphiclist.txx  userCodeFragment.cpp  userCodeFragment.h  util.h
src/base/groupedproperties/: numbereditem.h  scriptable.h  scriptfragment.cpp  scriptfragment.h  serializable.h  userscriptinjectable.h
src/base/groupedproperties/defaultImpl/: defaultnumbereditem.h  defaultuserscriptinjectable.cpp
src/base/numbereditem/: defaultnumbereditem.cpp  defaultnumbereditem.h  numbereditem.h
src/base/persistable/: defaultpersistable.cpp  defaultpersistable.h  defaultpersistablefragment.cpp  defaultpersistablefragment.h  defaultpropagatingpersistable.cpp  defaultpropagatingpersistable.h  persistable.h  propagatingpersistable.h
src/base/sheet/: cleansheetfragment.h  fontfragment.cpp  fontfragment.h  titlefragment.cpp  titlefragment.h
src/base/terminalInfoProvider/: abstractterminalinfoprovider.cpp  abstractterminalinfoprovider.h  backgroundfragment.cpp  backgroundfragment.h  colorfragment.cpp  colorfragment.h  continuoussizefragment.cpp  continuoussizefragment.h  enhancedfragment.cpp  enhancedfragment.h  fontfragment.cpp  fontfragment.h  lineendsfragment.cpp  lineendsfragment.h
src/base/terminalinfoprovider/: backgroundfragment.h  continuoussizefragment.cpp  continuoussizefragment.h  fontfragment.h  lineendsfragment.cpp
src/base/userscriptinjectable/: defaultuserscriptinjectable.h  userscriptinjectable.h
src/base/validationresult/: validationresult.cpp  validationresult.h  validationresult.txx
src/interface/: _scriptable.cpp  _scriptable.h  collection.h  customizable.h  fragment.h  persistable.h  scriptable.h  serializable.h  sheet.cpp  sheet.h  terminalInfoProvider.h  terminalinfoprovider.h  textable.h
src/interface/baseProperties/: collection.h  namedtype.h  nonassignable.h  persistable.h  propagatingpersistable.h  userscriptinjectable.h  validatable.h
src/interface/baseProperties/defaultImpl/: defaultcollection.h  defaultcollection.txx  defaultpersistable.cpp  defaultpersistable.h  defaultpropagatingpersistable.cpp  defaultpropagatingpersistable.h  defaultuserscriptinjectable.cpp  defaultuserscriptinjectable.h
src/interface/groupedProperties/: fragment.h  numbereditem.h  scriptable.h  scriptfragment.h  serializable.h  userscriptinjectable.h
src/interface/groupedProperties/defaultImpl/: defaultnumbereditem.cpp  defaultuserscriptinjectable.cpp  defaultuserscriptinjectable.h
src/report/: _terminalinfoprovider.cpp  _terminalinfoprovider.h  outputPathProvider.cpp  outputPathProvider.h  outputpathprovider.cpp  report.cpp  report.h  report.txx
src/report/terminalInfoProvider/: pdfcairo.cpp  pdfcairo.h  tip_pdfcairo.cpp  tip_pdfcairo.h
src/report/terminalinfoprovider/: pdfcairo.cpp  pdfcairo.h  terminalinfoprovider.h
src/report/terminalinfoprovider/fragments/: backgroundfragment.cpp  backgroundfragment.h  colorfragment.cpp  colorfragment.h  continuoussizefragment.cpp  continuoussizefragment.h  enhancedfragment.cpp  enhancedfragment.h  fontfragment.cpp  fontfragment.h  lineendsfragment.cpp  lineendsfragment.h
src/sheet/: emptysheet.cpp  emptysheet.h  sheet.h
src/sheet/fragments/: cleansheetfragment.cpp  fontfragment.cpp  fontfragment.h  titlefragment.cpp  titlefragment.h
src/sheet/sheetscollection/: defaultsheetscollection.cpp  defaultsheetscollection.h  defaultsheetscollection.txx  sheetscollection.h
src/typesystem/: concepts.h  constants.h  enums.h  errors.cpp  errors.h  types.h
unittest/: CMakeLists.txt
unittest/src/: tst_collection.cpp  tst_collection_test.cpp  tst_filesystem.cpp  tst_foo_test.cpp  tst_validation.cpp
unittest/src/TerminalInfoProvider/: tst_PdfCairo.cpp
unittest/src/collection/: tst_collection.cpp  tst_stdrangeutils.cpp
unittest/src/persistable/: tst_filesystem.cpp  tst_propagate.cpp
unittest/src/report/: tst_outputpathprovider.cpp  tst_report.cpp
unittest/src/terminalinfoprovider/: tst_PdfCairo.cpp
